tests/source/floats/invalid/semantic/complement_float.c
int main(void) {
    /* You can't take the bitwise complement of a float */
    float d = ~10.0;
    return 0;
}
